<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/productTextAmount"
        android:layout_alignBottom="@+id/productTextAmount"
        android:layout_alignParentRight="true"
        android:text="@string/buttonplus" />

    <Button
        android:id="@+id/buttonminus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/productTextAmount"
        android:layout_alignBottom="@+id/productTextAmount"
        android:layout_alignParentLeft="true"
        android:text="@string/buttonminus" />

    <TextView
        android:id="@+id/productTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/productDetailAmount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/productTextUPC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/productDetailUPC"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/productTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonminus"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/productDetailName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/productTextDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonminus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/productDetailDesc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productTextDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/buttonconfirm" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonConfirm"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/buttonConfirm"
        android:text="@string/deleteButton" />

</RelativeLayout>
