<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/del_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/deleteButton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/del_button"
        android:layout_alignBottom="@+id/del_button"
        android:layout_alignParentLeft="true"
        android:text="@string/deleteText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    
    
  

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/del_button"
        android:layout_marginTop="30dp"
        android:text="@string/setNotifications"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="108dp"
        android:layout_marginRight="78dp"
        android:layout_toLeftOf="@+id/del_button"
        android:text="@string/aboutapp" />

</RelativeLayout>
