<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		
		<TextView
			android:id="@+id/nameValue"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/name"
				/>
		<TextView
			android:id="@+id/displayName"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text=""
				/>
		
		
	<LinearLayout
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent">
        <TextView
			android:id="@+id/scanResult"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text=""
			/>
		
	</LinearLayout>	

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center" >

	    <Button
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/Products"
			android:id="@+id/Products"
			android:clickable="true" 
			android:layout_width="0dip"
			android:layout_weight="1">
			</Button>

	    <Button
	        android:id="@+id/hSettings"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:clickable="true"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/Settings" />

	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="100dp" >

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >

		    <TextView
		        android:id="@+id/TextView01"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
		</LinearLayout>

	
	</LinearLayout>

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center" >

	    <Button
	        android:id="@+id/inventNow"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="138dp"
	        android:layout_height="109dp"
	        android:text="@string/inventNow"
	        android:clickable="true"
	        android:textSize="40dp" >

			</Button>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="120dp" >

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >

		    <TextView
		        android:id="@+id/TextView02"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
		</LinearLayout>

	
	</LinearLayout>

	<Button
	    android:id="@+id/Logout"
	    android:layout_width="108dp"
	    android:layout_height="wrap_content"
	    android:clickable="true"
	    android:gravity="center_vertical|center_horizontal"
	    android:text="@string/Logout" />
		
	</LinearLayout>
	